Fixed minor style and colors broken on Mantine v7 update
* Fixed action icon styles

* small fixes

* fix brand color

* more small fixes

* fix disabled color for dark

* feat: customize highlight and warning badge

* chore: Remove hardcoded variables

* feat: add text wrap pretty to pop over

* fix: pagination position

* chore: small adjustments

--- a/frontend/src/assets/app_shell.module.scss
+++ b/frontend/src/assets/app_shell.module.scss
@@ -1,5 +1,7 @@
-.main {
-  @include dark {
-    background-color: rgb(26, 27, 30);
+@layer mantine {
+  .main {
+    @include dark {
+      background-color: var(--mantine-color-dark-8);
+    }
   }
 }
